test/ui/test/packages/invalid-package-and-component-names/package.metadata
# TEST fail check

name: "???",
version: "0.0.0",

components: {
    "of": {
        type: executable,
        path: "",

        dependencies: {
            "0//": { component: "hey there", package: "-e" },
            "": { component: module, provider: distribution },
            data: {},
        },
    },
    # @Task add unquoted invalid name
},
